--- a/AmdDriverTool/AmdDriverTool.vcxproj
+++ b/AmdDriverTool/AmdDriverTool.vcxproj
@@ -67,17 +67,34 @@
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
       <PreprocessorDefinitions>_VSDESIGNER_DONT_LOAD_AS_DLL;DISABLE_XAML_GENERATED_MAIN;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <ResourceCompile>
+      <PreprocessorDefinitions Condition="'$(Configuration)'=='Debug'">_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ResourceCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateWindowsMetadata>false</GenerateWindowsMetadata>
+      <AdditionalDependencies>Comdlg32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVDebug.h" />
+    <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVFiles.h" />
     <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVFinally.h" />
     <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVHighResDelay.h" />
     <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVString.h" />
+    <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVVersion.h" />
+    <ClInclude Include="AdlxValuesApply.h" />
+    <ClInclude Include="AdlxValuesChange.h" />
+    <ClInclude Include="AdlxValuesExport.h" />
+    <ClInclude Include="AdlxValuesImport.h" />
+    <ClInclude Include="AdlxLoadInfo.h" />
+    <ClInclude Include="AdlxLoadValues.h" />
+    <ClInclude Include="AdlxValuesReset.h" />
+    <ClInclude Include="AdlxUpdateLoop.h" />
     <ClInclude Include="AdlxVerticalRefresh.h" />
+    <ClInclude Include="AdlxRadeonChill.h" />
+    <ClInclude Include="AdlxInitialize.h" />
+    <ClInclude Include="AdlxVariables.h" />
     <ClInclude Include="ADLX\ADLXHelper\Windows\Cpp\ADLXHelper.h" />
     <ClInclude Include="ADLX\Include\ADLX.h" />
     <ClInclude Include="ADLX\Include\ADLXDefines.h" />
@@ -85,6 +102,8 @@
     <ClInclude Include="ADLX\Include\ADLXVersion.h" />
     <ClInclude Include="ADLX\Include\I3DSettings.h" />
     <ClInclude Include="ADLX\Include\I3DSettings1.h" />
+    <ClInclude Include="ADLX\Include\I3DSettings2.h" />
+    <ClInclude Include="ADLX\Include\IApplications.h" />
     <ClInclude Include="ADLX\Include\IChangedEvent.h" />
     <ClInclude Include="ADLX\Include\ICollections.h" />
     <ClInclude Include="ADLX\Include\IDesktops.h" />
@@ -94,6 +113,7 @@
     <ClInclude Include="ADLX\Include\IDisplays.h" />
     <ClInclude Include="ADLX\Include\IDisplays1.h" />
     <ClInclude Include="ADLX\Include\IDisplays2.h" />
+    <ClInclude Include="ADLX\Include\IDisplays3.h" />
     <ClInclude Include="ADLX\Include\IDisplaySettings.h" />
     <ClInclude Include="ADLX\Include\IGPUAutoTuning.h" />
     <ClInclude Include="ADLX\Include\IGPUManualFanTuning.h" />
@@ -105,16 +125,17 @@
     <ClInclude Include="ADLX\Include\IGPUTuning1.h" />
     <ClInclude Include="ADLX\Include\II2C.h" />
     <ClInclude Include="ADLX\Include\ILog.h" />
+    <ClInclude Include="ADLX\Include\IMultiMedia.h" />
     <ClInclude Include="ADLX\Include\IPerformanceMonitoring.h" />
     <ClInclude Include="ADLX\Include\IPerformanceMonitoring1.h" />
     <ClInclude Include="ADLX\Include\IPerformanceMonitoring2.h" />
+    <ClInclude Include="ADLX\Include\IPerformanceMonitoring3.h" />
     <ClInclude Include="ADLX\Include\IPowerTuning.h" />
+    <ClInclude Include="ADLX\Include\IPowerTuning1.h" />
     <ClInclude Include="ADLX\Include\ISmartAccessMemory.h" />
     <ClInclude Include="ADLX\Include\ISystem.h" />
     <ClInclude Include="ADLX\Include\ISystem1.h" />
-    <ClInclude Include="AdlxChill.h" />
-    <ClInclude Include="AdlxInitialize.h" />
-    <ClInclude Include="AdlxVariables.h" />
+    <ClInclude Include="ADLX\Include\ISystem2.h" />
     <ClInclude Include="AppVariables.h" />
     <ClInclude Include="MainPage.h">
       <DependentUpon>MainPage.xaml</DependentUpon>
