- Added SmartShift power settings.

--- a/AmdDriverTool/AmdDriverTool.vcxproj.filters
+++ b/AmdDriverTool/AmdDriverTool.vcxproj.filters
@@ -228,6 +228,12 @@
     <ClInclude Include="AdlxEventsMultimedia.h">
       <Filter>Page Files</Filter>
     </ClInclude>
+    <ClInclude Include="AdlxEventsPower.h">
+      <Filter>Page Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AdlxValuesLoadPower.h">
+      <Filter>Page Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml">
