--- a/AmdDriverTool/AmdDriverTool.vcxproj
+++ b/AmdDriverTool/AmdDriverTool.vcxproj
@@ -86,12 +86,14 @@
     <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVVersion.h" />
     <ClInclude Include="AdlxEventsGraphics.h" />
     <ClInclude Include="AdlxEventsMultimedia.h" />
+    <ClInclude Include="AdlxEventsPower.h" />
     <ClInclude Include="AdlxResetDisplay.h" />
     <ClInclude Include="AdlxValuesApply.h" />
     <ClInclude Include="AdlxValuesLoadDisplay.h" />
     <ClInclude Include="AdlxValuesLoadFans.h" />
     <ClInclude Include="AdlxValuesLoadGraphics.h" />
     <ClInclude Include="AdlxValuesLoadMultimedia.h" />
+    <ClInclude Include="AdlxValuesLoadPower.h" />
     <ClInclude Include="AdlxValuesLoadTuning.h" />
     <ClInclude Include="AdlxValuesPrepare.h" />
     <ClInclude Include="AdlxValuesExport.h" />
