- Added setting saving and loading.

--- a/RadeonTuner/RadeonTuner.vcxproj
+++ b/RadeonTuner/RadeonTuner.vcxproj
@@ -164,7 +164,8 @@
       <DependentUpon>App.xaml</DependentUpon>
     </ClInclude>
     <ClInclude Include="resource.h" />
-    <ClInclude Include="SettingEvents.h" />
+    <ClInclude Include="SettingCheck.h" />
+    <ClInclude Include="SettingSave.h" />
     <ClInclude Include="SettingLoad.h" />
   </ItemGroup>
   <ItemGroup>
