--- a/RadeonTuner/RadeonTuner.vcxproj
+++ b/RadeonTuner/RadeonTuner.vcxproj
@@ -91,6 +91,8 @@
     <ClInclude Include="AdlxEventsGraphics.h" />
     <ClInclude Include="AdlxEventsMultimedia.h" />
     <ClInclude Include="AdlxEventsPower.h" />
+    <ClInclude Include="AdlxLoopOverclock.h" />
+    <ClInclude Include="AdlxLoopMetrics.h" />
     <ClInclude Include="AdlxResetDisplay.h" />
     <ClInclude Include="AdlxEventsTuning.h" />
     <ClInclude Include="AdlxValuesLoadDisplay.h" />
@@ -105,7 +107,6 @@
     <ClInclude Include="AdlxInfoLoad.h" />
     <ClInclude Include="AdlxValuesLoadSelect.h" />
     <ClInclude Include="AdlxResetTuning.h" />
-    <ClInclude Include="AdlxUpdateLoop.h" />
     <ClInclude Include="AdlxEventsDisplay.h" />
     <ClInclude Include="AdlxEventsFans.h" />
     <ClInclude Include="AdlxInitialize.h" />
@@ -167,6 +168,7 @@
     <ClInclude Include="SettingCheck.h" />
     <ClInclude Include="SettingSave.h" />
     <ClInclude Include="SettingLoad.h" />
+    <ClInclude Include="TuningFanSettings.h" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
