--- a/RadeonTuner/RadeonTuner.vcxproj.filters
+++ b/RadeonTuner/RadeonTuner.vcxproj.filters
@@ -285,6 +285,9 @@
     <ClInclude Include="RegEvents.h">
       <Filter>Page Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVProcesses.h">
+      <Filter>Include Files\ArnoldVinkCode</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml">
