--- a/RadeonTuner/RadeonTuner.vcxproj.filters
+++ b/RadeonTuner/RadeonTuner.vcxproj.filters
@@ -297,6 +297,9 @@
     <ClInclude Include="..\..\ArnoldVinkCode\CPP\AVSettingsStartup.h">
       <Filter>Include Files\ArnoldVinkCode</Filter>
     </ClInclude>
+    <ClInclude Include="SettingAdmin.h">
+      <Filter>Page Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Page Include="MainPage.xaml">
